@@ -10,6 +10,7 @@
 		<option name='ignore_exitcode_4' value='1'/>
 		<option name='show_memleaks' value='1'/>
 		<option name='show_clipped' value='1'/>
+		<option name='unexpected_stderr' value='1'/>
 		<option name='group_data' value='1'/>
 	</report_10>
 	<stdout_file>
