@@ -740,6 +740,7 @@
     - removed "tagmap_threshold"
     - added checks for fopen() calls and reported error when it fails
     - return a result from create_report()
+    - added option "unexpected_stderr" to check for unexpected stderr messages
 
     create_image_xml
     - fixed some CLion inspection warnings
